@@ -1,4 +1,4 @@
-#name: i386 relax 3
+#name: i386 relax 2
 #objdump: -dw
 
 .*: +file format .*
@@ -6,7 +6,6 @@
 
 Disassembly of section .text:
 
-0+ <.text>:
 #...
   38:	0f 85 88 00 00 00    	jne    (0x)?c6( .*)?
 #...
