@@ -4,7 +4,7 @@
         .fill 10, 1, 0x90
 	jne .LBB0_43
         .fill 5, 1, 0x90
-	.align 16, 0x90
+	.p2align 4, 0x90
         .fill 118, 1, 0x90
 .LBB0_43:
 	nop
