@@ -1,3 +1,10 @@
+2010-10-27  Alan Modra  <amodra@gmail.com>
+
+	* gas/i386/relax-1.s: Use .p2align, not .align.
+	* gas/i386/relax-2.s: Likewise.
+	* gas/i386/relax-1.d: Remove label match.
+	* gas/i386/relax-2.d: Likewise.  Correct test name.
+
 2010-10-26  Dave Korn  <dave.korn.cygwin@gmail.com>
 
 	* gas/i386/relax-1.d: Generalize regexes a bit.
